--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@upstash/redis": "^1.34.4",
     "framer-motion": "^12.4.1",
     "ioredis": "^5.5.0",
+    "jest": "^29.7.0",
     "multiparty": "^4.2.3",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/dotenv": "^6.1.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
